--- a/mobile/src/main/res/layout/activity_audio.xml
+++ b/mobile/src/main/res/layout/activity_audio.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2017 Pedro Albuquerque Santos.
   ~
   ~ This file is part of YanuX Scavenger.
@@ -21,15 +20,15 @@
         android:id="@+id/audio_tone_switch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/audio_tone"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginTop="8dp"
+        android:text="@string/audio_tone"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <SeekBar
         android:id="@+id/audio_tone_frequency_seek_bar"
@@ -39,23 +38,55 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:max="20000"
         android:progress="440"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/audio_tone_frequency_text_view" />
+        app:layout_constraintTop_toBottomOf="@+id/audio_tone_frequency_edit_text" />
 
     <TextView
         android:id="@+id/audio_tone_frequency_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="@string/audio_tone_frequency"
-        app:layout_constraintTop_toBottomOf="@+id/audio_tone_switch"
-        android:layout_marginTop="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/audio_tone_frequency_edit_text"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="8dp" />
+        app:layout_constraintTop_toTopOf="@+id/audio_tone_frequency_edit_text" />
+
+    <EditText
+        android:id="@+id/audio_tone_frequency_edit_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="10dp"
+        android:ems="10"
+        android:inputType="number"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toRightOf="@+id/audio_tone_frequency_text_view"
+        app:layout_constraintRight_toLeftOf="@+id/audio_tone_frequency_units_text_view"
+        app:layout_constraintTop_toBottomOf="@+id/audio_tone_switch" />
+
+    <TextView
+        android:id="@+id/audio_tone_frequency_units_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="46dp"
+        android:layout_marginRight="46dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/audio_tone_frequency_units"
+        app:layout_constraintBottom_toBottomOf="@+id/audio_tone_frequency_edit_text"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/audio_tone_switch"
+        app:layout_constraintVertical_bias="0.75" />
 
 
 </android.support.constraint.ConstraintLayout>
