--- a/mobile/src/main/res/layout/activity_audio.xml
+++ b/mobile/src/main/res/layout/activity_audio.xml
@@ -47,8 +47,8 @@
         android:id="@+id/audio_tone_frequency_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
-        android:layout_marginLeft="2dp"
+        android:layout_marginBottom="17dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginStart="8dp"
         android:text="@string/audio_tone_frequency"
         app:layout_constraintBottom_toBottomOf="@+id/audio_tone_frequency_edit_text"
@@ -59,7 +59,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginLeft="0dp"
+        android:layout_marginLeft="25dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="10dp"
         android:ems="10"
@@ -71,9 +71,9 @@
         android:id="@+id/audio_tone_frequency_units_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="-8dp"
+        android:layout_marginBottom="0dp"
         android:layout_marginEnd="46dp"
-        android:layout_marginLeft="-9dp"
+        android:layout_marginLeft="30dp"
         android:text="@string/audio_tone_frequency_units"
         app:layout_constraintBottom_toBottomOf="@+id/audio_tone_frequency_edit_text"
         app:layout_constraintLeft_toRightOf="@+id/audio_tone_frequency_edit_text" />
@@ -82,7 +82,7 @@
         android:id="@+id/audio_tone_duration_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
+        android:layout_marginBottom="12dp"
         android:layout_marginLeft="8dp"
         android:text="@string/audio_tone_duration"
         app:layout_constraintBottom_toBottomOf="@+id/audio_tone_duration_edit_text"
@@ -92,7 +92,7 @@
         android:id="@+id/audio_tone_interval_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
+        android:layout_marginBottom="13dp"
         android:layout_marginLeft="8dp"
         android:text="@string/audio_tone_interval"
         app:layout_constraintBottom_toBottomOf="@+id/audio_tone_interval_edit_text"
@@ -108,7 +108,7 @@
         android:ems="10"
         android:inputType="number"
         android:text="1000"
-        app:layout_constraintHorizontal_bias="0.06"
+        app:layout_constraintHorizontal_bias="0.151"
         app:layout_constraintLeft_toRightOf="@+id/audio_tone_duration_text_view"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/audio_tone_frequency_seek_bar" />
@@ -119,13 +119,35 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="-1dp"
         android:ems="10"
         android:inputType="number"
         android:text="1000"
-        app:layout_constraintHorizontal_bias="0.08"
+        app:layout_constraintHorizontal_bias="0.232"
         app:layout_constraintLeft_toRightOf="@+id/audio_tone_interval_text_view"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/audio_tone_duration_edit_text" />
+
+    <Button
+        android:id="@+id/audio_tone_play_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/audio_tone_play"
+        app:layout_constraintRight_toLeftOf="@+id/audio_tone_record_button"
+        android:layout_marginTop="22dp"
+        app:layout_constraintTop_toBottomOf="@+id/audio_tone_interval_text_view"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.0" />
+
+    <Button
+        android:id="@+id/audio_tone_record_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/audio_tone_record"
+        android:layout_marginTop="22dp"
+        app:layout_constraintTop_toBottomOf="@+id/audio_tone_interval_text_view"
+        android:layout_marginLeft="88dp"
+        app:layout_constraintLeft_toLeftOf="@+id/audio_tone_play_button" />
 
 </android.support.constraint.ConstraintLayout>
