--- a/mobile/src/main/res/layout/activity_audio.xml
+++ b/mobile/src/main/res/layout/activity_audio.xml
@@ -20,7 +20,6 @@
         android:id="@+id/audio_tone_cycle_switch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="4dp"
         android:layout_marginStart="4dp"
         android:text="@string/audio_tone_cycle"
         android:layout_marginLeft="4dp"
@@ -30,13 +29,12 @@
 
     <SeekBar
         android:id="@+id/audio_tone_frequency_seek_bar"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="4dp"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="0dp"
         android:max="20000"
         android:progress="440"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -65,7 +63,6 @@
         android:inputType="number"
         android:selectAllOnFocus="false"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="-1dp"
         app:layout_constraintTop_toBottomOf="@+id/audio_tone_frequency_text_view"
         android:layout_marginLeft="4dp"
         app:layout_constraintLeft_toLeftOf="parent" />
@@ -77,8 +74,8 @@
         android:layout_marginLeft="4dp"
         android:text="@string/audio_tone_duration"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/audio_tone_frequency_seek_bar" />
+        app:layout_constraintTop_toBottomOf="@+id/audio_tone_frequency_seek_bar"
+        android:layout_marginStart="4dp" />
 
     <TextView
         android:id="@+id/audio_tone_interval_text_view"
@@ -88,7 +85,8 @@
         android:text="@string/audio_tone_interval"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="4dp"
-        app:layout_constraintTop_toBottomOf="@+id/audio_tone_duration_edit_text" />
+        app:layout_constraintTop_toBottomOf="@+id/audio_tone_duration_edit_text"
+        android:layout_marginStart="4dp" />
 
     <EditText
         android:id="@+id/audio_tone_duration_edit_text"
@@ -101,23 +99,25 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="4dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/audio_tone_duration_text_view"
-        app:layout_constraintHorizontal_bias="0.503" />
+        app:layout_constraintHorizontal_bias="0.503"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp" />
 
     <EditText
         android:id="@+id/audio_tone_interval_edit_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="4dp"
-        android:layout_marginTop="0dp"
         android:ems="10"
         android:inputType="number"
         android:text="1000"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/audio_tone_interval_text_view"
         android:layout_marginLeft="4dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp" />
 
     <Button
         android:id="@+id/audio_tone_play_button"
@@ -126,27 +126,27 @@
         android:text="@string/audio_tone_play"
         android:layout_marginLeft="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/audio_tone_interval_edit_text" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/audio_recording_filename_edit_text"
+        android:layout_marginStart="16dp" />
 
     <Button
         android:id="@+id/audio_tone_record_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/audio_tone_record_start"
-        android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/audio_tone_interval_edit_text"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/audio_recording_filename_edit_text"
         android:layout_marginRight="16dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="16dp" />
 
     <TextView
         android:id="@+id/audio_tone_frequency_units_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="46dp"
         android:text="@string/audio_tone_frequency_units"
         app:layout_constraintLeft_toRightOf="@+id/audio_tone_frequency_edit_text"
-        android:layout_marginLeft="0dp"
         android:layout_marginTop="25dp"
         app:layout_constraintTop_toBottomOf="@+id/audio_tone_frequency_text_view" />
 
@@ -157,8 +157,7 @@
         android:text="@string/audio_tone_duration_units"
         android:layout_marginTop="24dp"
         app:layout_constraintTop_toBottomOf="@+id/audio_tone_duration_text_view"
-        app:layout_constraintLeft_toRightOf="@+id/audio_tone_duration_edit_text"
-        android:layout_marginLeft="0dp" />
+        app:layout_constraintLeft_toRightOf="@+id/audio_tone_duration_edit_text" />
 
     <TextView
         android:id="@+id/audio_tone_interval_units_text_view"
@@ -166,8 +165,31 @@
         android:layout_height="wrap_content"
         android:text="@string/audio_tone_interval_units"
         app:layout_constraintLeft_toRightOf="@+id/audio_tone_interval_edit_text"
-        android:layout_marginLeft="0dp"
         android:layout_marginTop="24dp"
         app:layout_constraintTop_toBottomOf="@+id/audio_tone_interval_text_view" />
+
+    <TextView
+        android:id="@+id/audio_recording_filename_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/audio_tone_record_filename"
+        android:layout_marginLeft="4dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/audio_tone_interval_edit_text" />
+
+    <EditText
+        android:id="@+id/audio_recording_filename_edit_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="@string/audio_tone_record_filename_default"
+        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/audio_recording_filename_text_view"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
